--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -47,6 +47,8 @@ a {
 
 button {
    cursor: pointer;
+   color: inherit;
+   font-family: inherit;
    display: inline-block;
    font-size: inherit;
    border: none;
