--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -7,6 +7,9 @@
       padding-top: toRem(24);
       margin-bottom: toRem(72);
    }
+   @media (max-width: $mobile) {
+      padding-top: toRem(16);
+   }
 }
 .footer__container {
    @media (max-width: $tablet) {
@@ -24,6 +27,9 @@
       flex-direction: column;   
       margin-bottom: toRem(36);
       gap: toRem(16);
+   }
+   @media (max-width: $mobile) {
+      margin-bottom: toRem(16);
    }
    
 }
@@ -53,6 +59,9 @@
       width: 100%;
       justify-content: space-between;
    }
+   @media (max-width: $mobile) {
+      gap: toRem(8);
+   }
 
 }
 
@@ -73,6 +82,12 @@
       height: toRem(44);
       max-width: toRem(729);
    }
+   @media (max-width: $mobile) {
+      flex-basis: auto;
+      max-width: 100%;
+      flex-shrink: 1;
+      flex-grow: 2;
+   }
 
 }
 .footer__subscribe-btn {
@@ -86,6 +101,25 @@
       height: toRem(44);
       max-width: toRem(163);
    }
+   @media (max-width: $mobile) {
+      flex-basis: toRem(48);
+      flex-shrink: 2;
+      max-width: toRem(48);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+   & img {
+      display: none;
+      @media (max-width: $mobile) {
+         display: block;
+      }
+   }
+   & span {
+      @media (max-width: $mobile) {
+         display: none;
+      }
+   }
 }
 .footer__content {
    display: flex;
@@ -95,6 +129,13 @@
       margin: 0 auto;
    }
 }
+
+.footer__connect {
+   @media (max-width: $mobile) {
+      max-width: toRem(190);
+   }
+}
+
 .footer__about {
    flex-basis: toRem(293);
    flex-grow: 2;
@@ -125,6 +166,11 @@
       margin-bottom: toRem(24);
       gap: toRem(10);
    }   
+   @media (max-width: $mobile) {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: toRem(16);
+   }   
 }
 
 .footer__connect-wrapper {
@@ -143,11 +189,20 @@
          }
        } 
    }
+   & a:last-child > img {
+      display: none;
+      @media (max-width: $tablet) {
+         display: block;
+      }
+   }
    & p {
       display: none;
       @media (max-width: $tablet) {
          display: block;
       }
+   }
+   @media (max-width: $mobile) {
+      margin-bottom: toRem(16);
    }
 }
 
@@ -159,6 +214,9 @@
    @media (max-width: $tablet) {
       height: toRem(44);
    }
+   @media (max-width: $mobile) {
+      width: toRem(160);
+   }
 }
 
 .footer__title {
@@ -166,12 +224,24 @@
    @media (max-width: $tablet) {
       margin-bottom: toRem(16);
    }
+   @media (max-width: $mobile) {
+      margin-bottom: toRem(12);
+   }
 }
 
 .footer__messenger-wrapper {
    display: flex;
    gap: toRem(16);
    height: toRem(32);
+   @media (max-width: $mobile) {
+      gap: toRem(18);
+   }
+}
+
+.footer__info, .footer__buyers {
+   @media (max-width: $mobile) {
+      display: none;
+   }
 }
 
 .footer__info-list {
@@ -216,6 +286,10 @@
 .footer__copyright-text {
    color: $textThirdColor;
    text-wrap: nowrap;
+   @media (max-width: $mobile) {
+      max-width: toRem(115);
+      text-wrap: wrap;
+   }
 }
 .footer__agreement {
    color: $greyColor600;
