--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -286,68 +286,13 @@
    border: 1px solid $greyColor400;
 }
 
-.header__result-wrapper {
-   display: flex;
-   flex-direction: column;
-   margin-bottom: toRem(20);
-   color: $textThirdColor;
-   font-weight: 700;
-   font-size: toRem(16);
-   transition: $mainTransition;
-   & li {
-      position: relative;
-      @media (any-hover:hover) {
-         &:hover > .product__example {
-            opacity: 1;
-            visibility: visible;
-            transform: scale(1);         
-         }
-       } 
-   }
-   & li > a {
-      display: flex;
-      justify-content: space-between;
-      gap: toRem(4);
-      align-items: center;
-      line-height: 1;
-      padding: toRem(12);
-      @media (any-hover:hover) {
-         &:hover {
-           background-color: $greyColor50;
-         }
-      } 
-   }
-   & li > a > span {
-      text-wrap: nowrap;
-   }
-   & li > a > p{
-      display: inline-flex;
-      align-items: center;
-      gap: toRem(4);
-   }
-   & li > a > p span:last-child {
-      color: $redColor;
-      font-weight: 400;
-   } 
-}
-
-.header__result-btn {
-   @include main-btn;
-   margin-left: toRem(16);
-   height: toRem(40);
-   line-height: 1.3;
-   width: 100%;
-   max-width: toRem(245);
-   text-align: center;
-}
-
 .product__example {
    opacity: 0;
    visibility: hidden;
-   transform: scale(0);
    position: absolute;
    top: -13px;
-   left: 101%;
+   left: 100%;
+   margin-left: 3px;
    background-color: $whiteColor;
    z-index: 1000;
    box-shadow: $boxShadow;
@@ -403,6 +348,64 @@
       font-weight: 400;      
    }
 }
+
+
+.header__result-wrapper {
+   display: flex;
+   flex-direction: column;
+   margin-bottom: toRem(20);
+   color: $textThirdColor;
+   font-weight: 700;
+   font-size: toRem(16);
+   transition: $mainTransition;
+   // overflow: hidden;
+   position: relative;
+   & li {
+      @media (any-hover:hover) {
+         &:hover > .product__example {
+            opacity: 1;
+            visibility: visible;
+         }
+       } 
+   }
+
+   & li > a {
+      display: flex;
+      justify-content: space-between;
+      gap: toRem(10);
+      align-items: center;
+      line-height: 1;
+      padding: toRem(12);
+      @media (any-hover:hover) {
+         &:hover {
+           background-color: $greyColor50;
+         }
+      } 
+   }
+   & li > a > span {
+      text-wrap: nowrap;
+   }
+   & li > a > p{
+      display: inline-flex;
+      align-items: center;
+      gap: toRem(4);
+   }
+   & li > a > p span:last-child {
+      color: $redColor;
+      font-weight: 400;
+   } 
+}
+
+.header__result-btn {
+   @include main-btn;
+   margin-left: toRem(16);
+   height: toRem(40);
+   line-height: 1.3;
+   width: 100%;
+   max-width: toRem(245);
+   text-align: center;
+}
+
 
 .header__actions-list {
    display: flex;
